--- a/css/widget.css
+++ b/css/widget.css
@@ -8,12 +8,11 @@
 .waf-widget.waf-matrixreloaded>div>div.waf-widget.waf-container {
     position: absolute;
     overflow: hidden;
-    border: 1px solid #999999;
-    border-radius: 4px;
-    background: white;
-    box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.2);
     width: 200px;
     height:200px;
+}
+.waf-widget.waf-matrixreloaded>div>div.waf-widget.waf-container.waf-state-selected {
+    box-shadow: 2px 2px 6px rgba(0, 0, 255, 0.5);
 }
 
 .waf-widget.waf-matrixreloaded>div>div.waf-widget.waf-container.waf-studio-donotsave {
